add service status page and move whitepapers to blog

--- a/docs/_posts/2024-10-19-dao.md
+++ b/docs/_posts/2024-10-19-dao.md
@@ -1,7 +1,7 @@
 ---
-layout: page
-title: DAO
-permalink: /dao/
+layout: post
+title:  "DAO Overview"
+date: 2024-10-19
 ---
 
 The Spaced Out Thoughts Development Foundation is evolving from an informal entity to a DAO ([a Decentralized Autonomous Organization](https://en.wikipedia.org/wiki/Decentralized_autonomous_organization)) in order to establish a self-sufficient, trustless organization with the goal of incentivizing development of [Digicus](https://spaced-out-thoughts-dev-foundation.github.io/digicus/), a platform to make **smart contract development as easy as possible**.
@@ -90,3 +90,169 @@ As stated in the introduction, this is just an initial basic sketch. We fully ex
 **[DAO Hub Website]**: a visual of the pertinent information from the DAO contract. Will have basic functionality to interact with the contract as well.
 
 ***
+
+## Decentralized Oracle Network
+
+An oracle:
+> Oracles are applications that produce data feeds that make off-chain data sources available to the blockchain for smart contracts... [w]ithout an oracle, a smart contract would be limited entirely to on-chain data. Oracles differ based on the source of data (one or multiple sources), trust models (centralized or decentralized), and system architecture (immediate-read, publish-subscribe, and request-response). We can also distinguish between oracles based on whether they retrieve external data for use by on-chain contracts (input oracles), send information from the blockchain to the off-chain applications (output oracles), or perform computational tasks off-chain (computational oracles)... [s]ince information stored on-chain is unalterable and publicly available, Ethereum nodes can safely use the oracle imported off-chain data to compute state changes without breaking consensus... [t]o do this, an oracle is typically made up of a smart contract running on-chain and some off-chain components. The on-chain contract receives requests for data from other smart contracts, which it passes to the off-chain component (called an oracle node). This oracle node can query data sources—using application programming interfaces (APIs), for example—and send transactions to store the requested data in the smart contract's storage.
+> -- Ethereum.org (https://ethereum.org/en/developers/docs/oracles/)
+
+A smart contract is 
+
+
+A blockchain is essentially a closed network. Oracles allow info to flow in and out of the network from a trusted source - folks decide which Oracles to trust.
+
+To design an oracle,
+
+<center><img src="../images/github_issue_state_machine.png" alt="architecture of DAO"/></center>
+
+### Sub Goals
+* **Cheap**: some folks may wish to operate with minimal resources. It should be possible to operate on a minimal raspberry pi
+
+
+Oracle Design pattern: _pub-sub_
+
+
+Decentralized oracle:
+* correctness
+  * authenticity proof
+  * consensus
+  * Voting & staking
+* Schelling point? (chain link does this)
+* Reputation of correctness based on past historical performance
+
+Best Source
+
+
+#### What we want it to do
+
+Synchronize critical github issue information.
+
+States of an issue.
+
+1. initially posted (lock funds to issue)
+2. unclaimed
+3. claimed (someone staked and attached github to some address)
+4. started (PR opened linking PR)
+5. ready for review
+6. accepted (will trigger release of funds)
+7. [misc. path] timed out, released (but stake not released. Dev gets less back in refund if they give up based on time)
+
+Connecting Github and Stellar
+
+[Organization]:
+  * Data
+    * Stellar Address
+    * Github handle
+    * Domain
+  * Github side
+    * Proof posted in oracle repo (signed data with username using public key)
+  * Stellar side
+    * Proof posted in contract along with mapping
+  * Domain side
+    * Manifest
+
+**Github Side**
+```
+organizations:
+  - name: "Spaced Out Thoughts Development Foundation"
+    website: "https://spaced-out-thoughts-dev-foundation.github.io/"
+    proof: "TBD"
+    github_name: "robertDurst"
+    public_key: "GD5I4NMCQLYS464YS6ANTI55JLLPO6PPL4KYHP3YKBJ4B7R7MPVQK7IM"
+```
+
+Proof Algorithm
+[library]: https://github.com/spaced-out-thoughts-dev-foundation/github-soroban-proof-generator
+[Pseudocode]:
+```
+LINK_TO_ORG = initial SHA of proof-less verified PR to organization repository
+LINK_TO_MANIFEST = manifest url from their domain
+PROOF = sign_with_stellar_key(LINK_TO_ORG & GITHUB_USERNAME & LINK_TO_MANIFEST)
+```
+
+[User]:
+  * Data
+    * Stellar Address
+    * Github handle
+  * Github side
+    * Proof posted in oracle repo (signed data with username using public key)
+  * Stellar side
+    * Proof posted in contract along with mapping
+
+**Github Side**
+```
+users:
+  - github_name: "robertDurst"
+    proof: "TBD"
+    public_key: "GD5I4NMCQLYS464YS6ANTI55JLLPO6PPL4KYHP3YKBJ4B7R7MPVQK7IM"
+```
+
+Proof Algorithm
+[library]: https://github.com/spaced-out-thoughts-dev-foundation/github-soroban-proof-generator
+[Pseudocode]:
+```
+LINK_TO_ORG = initial SHA of proof-less verified PR to organization repository
+PROOF = sign_with_stellar_key(LINK_TO_ORG & GITHUB_USERNAME)
+```
+
+
+## Incentives
+
+1. review code
+2. put up code
+3. run a node
+
+## Things to Vote on
+
+1. issues to prioritize
+2. ecosystem proposals
+3. core reviewer acceptance
+
+## Reputation Score
+
+* reviews
+* contirbutions
+* voting
+* hosting a node
+
+
+## Contract Actions
+
+1. [Users] map github usernames to stellar addresses
+2. [Repos] list of repos to sync
+3. [Issues] per repo issue information
+   1. [Github] Phase 
+   2. [Github & Contract] If claimed, which account?
+   3. [Contract] Stake
+      1. Organization
+      2. Contributor
+      3. Reviewer
+
+* CRUD user
+* CRUD repo
+* CRUD issue
+* stake
+  * post issue
+    * stake
+      * issue accepted
+    * refund
+      * issue times out
+    * distribute to user
+      * pull request accepted
+  * claim issue
+    * stake
+      * issue claimed
+    * refund
+      * partial
+        * times out
+        * changes mind
+        * too many submissions
+  * review issue
+    * stake
+      * selected as reviewer
+    * refund
+      * submission fails
+      * submission completed successfully
+    * distribute to user
+      * times out review
